--- a/substrate/primitives/api/Cargo.toml
+++ b/substrate/primitives/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sp-api"
-version = "36.0.0"
+version = "36.0.1"
 authors.workspace = true
 edition.workspace = true
 license = "Apache-2.0"
@@ -33,7 +33,7 @@ sp-version.workspace = true
 thiserror = { optional = true, workspace = true }
 
 [dev-dependencies]
-sp-test-primitives = { workspace = true }
+sp-test-primitives = { path = "../test-primitives" }
 
 [features]
 default = ["std"]
