--- a/Plan.toml
+++ b/Plan.toml
@@ -4009,8 +4009,8 @@ reason = "changed"
 # umbrella
 name = "polkadot-sdk"
 from = "0.12.2"
-to = "2503.0.0"
-bump = "major"
+to = "2503.0.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
