--- a/cumulus/parachains/runtimes/assets/test-utils/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/test-utils/Cargo.toml
@@ -11,10 +11,10 @@ workspace = true
 
 [dependencies]
 codec = { features = ["derive", "max-encoded-len"], workspace = true }
-<<<<<<< HEAD
 frame-support.workspace = true
 frame-system.workspace = true
 pallet-assets.workspace = true
+pallet-asset-conversion.workspace = true
 pallet-balances.workspace = true
 pallet-timestamp.workspace = true
 pallet-session.workspace = true
@@ -30,40 +30,9 @@ parachains-runtimes-test-utils.workspace = true
 xcm.workspace = true
 xcm-builder.workspace = true
 xcm-executor.workspace = true
+xcm-runtime-apis.workspace = true
 pallet-xcm.workspace = true
 pallet-xcm-bridge-hub-router.workspace = true
-=======
-
-# Substrate
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-pallet-assets = { workspace = true }
-pallet-asset-conversion = { workspace = true }
-pallet-balances = { workspace = true }
-pallet-timestamp = { workspace = true }
-pallet-session = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-
-# Cumulus
-cumulus-pallet-parachain-system = { workspace = true }
-cumulus-pallet-xcmp-queue = { workspace = true }
-pallet-collator-selection = { workspace = true }
-parachains-common = { workspace = true }
-cumulus-primitives-core = { workspace = true }
-parachain-info = { workspace = true }
-parachains-runtimes-test-utils = { workspace = true }
-
-# Polkadot
-xcm = { workspace = true }
-xcm-builder = { workspace = true }
-xcm-executor = { workspace = true }
-pallet-xcm = { workspace = true }
-xcm-runtime-apis = { workspace = true }
-
-# Bridges
-pallet-xcm-bridge-hub-router = { workspace = true }
->>>>>>> 139691b1 (Fix `XcmPaymentApi::query_weight_to_asset_fee` version conversion (#6459))
 
 [dev-dependencies]
 hex-literal = { workspace = true, default-features = true }
