--- a/cumulus/parachains/runtimes/test-utils/Cargo.toml
+++ b/cumulus/parachains/runtimes/test-utils/Cargo.toml
@@ -11,7 +11,6 @@ workspace = true
 
 [dependencies]
 codec = { features = ["derive", "max-encoded-len"], workspace = true }
-<<<<<<< HEAD
 frame-support.workspace = true
 frame-system.workspace = true
 pallet-balances.workspace = true
@@ -27,44 +26,15 @@ cumulus-pallet-parachain-system.workspace = true
 cumulus-pallet-xcmp-queue.workspace = true
 pallet-collator-selection.workspace = true
 parachain-info.workspace = true
+parachains-common.workspace = true
 cumulus-primitives-core.workspace = true
 cumulus-primitives-parachain-inherent.workspace = true
 cumulus-test-relay-sproof-builder.workspace = true
 xcm.workspace = true
 xcm-executor.workspace = true
+xcm-runtime-apis.workspace = true
 pallet-xcm.workspace = true
 polkadot-parachain-primitives.workspace = true
-=======
-
-# Substrate
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-pallet-balances = { workspace = true }
-pallet-session = { workspace = true }
-pallet-timestamp = { workspace = true }
-sp-consensus-aura = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-sp-tracing = { workspace = true, default-features = true }
-sp-core = { workspace = true }
-
-# Cumulus
-cumulus-pallet-parachain-system = { workspace = true }
-cumulus-pallet-xcmp-queue = { workspace = true }
-pallet-collator-selection = { workspace = true }
-parachain-info = { workspace = true }
-parachains-common = { workspace = true }
-cumulus-primitives-core = { workspace = true }
-cumulus-primitives-parachain-inherent = { workspace = true }
-cumulus-test-relay-sproof-builder = { workspace = true }
-
-# Polkadot
-xcm = { workspace = true }
-xcm-executor = { workspace = true }
-pallet-xcm = { workspace = true }
-xcm-runtime-apis = { workspace = true }
-polkadot-parachain-primitives = { workspace = true }
->>>>>>> 139691b1 (Fix `XcmPaymentApi::query_weight_to_asset_fee` version conversion (#6459))
 
 [dev-dependencies]
 hex-literal = { workspace = true, default-features = true }
