--- a/substrate/test-utils/runtime/client/Cargo.toml
+++ b/substrate/test-utils/runtime/client/Cargo.toml
@@ -25,7 +25,7 @@ sp-consensus = { workspace = true, default-features = true }
 sp-core = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
 substrate-test-client = { workspace = true }
-substrate-test-runtime = { workspace = true, features = ["bls-experimental"] }
+substrate-test-runtime = { workspace = true }
 
 [features]
-bls-experimental = []
+bls-experimental = ["substrate-test-runtime/bls-experimental"]
