--- a/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asset-hub-westend-runtime"
-version = "0.27.1"
+version = "0.27.2"
 authors.workspace = true
 edition.workspace = true
 description = "Westend variant of Asset Hub parachain runtime"
@@ -91,8 +91,8 @@ bp-bridge-hub-westend.workspace = true
 snowbridge-router-primitives.workspace = true
 
 [dev-dependencies]
-asset-test-utils = { workspace = true, default-features = true }
-parachains-runtimes-test-utils = { workspace = true, default-features = true }
+asset-test-utils = { default-features = true, path = "../test-utils" }
+parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
