--- a/cumulus/parachains/runtimes/coretime/coretime-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/coretime/coretime-westend/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "coretime-westend-runtime"
-version = "0.13.1"
+version = "0.13.2"
 authors.workspace = true
 edition.workspace = true
 description = "Westend's Coretime parachain runtime"
@@ -74,7 +74,7 @@ parachains-common.workspace = true
 testnet-parachains-constants = { features = ["westend"], workspace = true }
 
 [dev-dependencies]
-parachains-runtimes-test-utils = { workspace = true, default-features = true }
+parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
 
 [features]
 default = ["std"]
