--- a/cumulus/parachains/runtimes/people/people-rococo/Cargo.toml
+++ b/cumulus/parachains/runtimes/people/people-rococo/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "people-rococo-runtime"
-version = "0.13.1"
+version = "0.13.2"
 authors.workspace = true
 edition.workspace = true
 description = "Rococo's People parachain runtime"
@@ -72,7 +72,7 @@ parachains-common.workspace = true
 testnet-parachains-constants = { features = ["rococo"], workspace = true }
 
 [dev-dependencies]
-parachains-runtimes-test-utils = { workspace = true, default-features = true }
+parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
 
 [features]
 default = ["std"]
