--- a/substrate/frame/utility/Cargo.toml
+++ b/substrate/frame/utility/Cargo.toml
@@ -24,6 +24,7 @@ frame-system = { workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
 sp-runtime = { workspace = true }
+impl-trait-for-tuples = { workspace = true }
 
 [dev-dependencies]
 pallet-balances = { workspace = true, default-features = true }
