--- a/Cargo.toml
+++ b/Cargo.toml
@@ -612,6 +612,7 @@ Inflector = { version = "0.11.4" }
 aes-gcm = { version = "0.10" }
 ahash = { version = "0.8.2" }
 alloy-core = { version = "0.8.15", default-features = false }
+alloy-sol-types = { version = "0.8.15", default-features = false }
 always-assert = { version = "0.1" }
 anyhow = { version = "1.0.81", default-features = false }
 approx = { version = "0.5.1" }
