--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -18,6 +18,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 alloy-core = { workspace = true, features = ["sol-types"] }
+alloy-sol-types = { workspace = true }
 codec = { features = ["derive", "max-encoded-len"], workspace = true }
 derive_more = { workspace = true }
 environmental = { workspace = true }
@@ -40,6 +41,7 @@ serde = { features = [
 	"alloc",
 	"derive",
 ], workspace = true, default-features = false }
+
 
 # Polkadot SDK Dependencies
 bn = { workspace = true }
@@ -64,6 +66,8 @@ subxt-signer = { workspace = true, optional = true, features = [
 ] }
 xcm = { workspace = true }
 xcm-builder = { workspace = true }
+xcm-simulator = { workspace = true, default-features = true }
+pallet-xcm = { workspace = true, default-features = true }
 
 [dev-dependencies]
 array-bytes = { workspace = true, default-features = true }
@@ -123,6 +127,7 @@ std = [
 	"subxt-signer",
 	"xcm-builder/std",
 	"xcm/std",
+	"pallet-xcm/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
