--- a/bridges/chains/chain-cumulus/Cargo.toml
+++ b/bridges/chains/chain-cumulus/Cargo.toml
@@ -22,6 +22,7 @@ bp-runtime = { workspace = true }
 # Substrate Based Dependencies
 frame-support = { workspace = true }
 frame-system = { workspace = true }
+parachains-common = { workspace = true }
 sp-api = { workspace = true }
 sp-std = { workspace = true }
 
@@ -36,6 +37,7 @@ std = [
 	"bp-runtime/std",
 	"frame-support/std",
 	"frame-system/std",
+	"parachains-common/std",
 	"polkadot-primitives/std",
 	"sp-api/std",
 	"sp-std/std",
