fix few things from latest master

--- a/substrate/frame/staking-async/runtimes/parachain/Cargo.toml
+++ b/substrate/frame/staking-async/runtimes/parachain/Cargo.toml
@@ -10,7 +10,7 @@ repository.workspace = true
 
 # helps with debugging omni-bencher
 [profile.release]
-debug = 1
+# debug = true
 
 [lints]
 workspace = true
