--- a/cumulus/parachains/runtimes/assets/asset-hub-rococo/bridge-primitives/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-rococo/bridge-primitives/Cargo.toml
@@ -4,7 +4,7 @@ description = "Primitives of AssetHubRococo parachain runtime."
 version = "0.4.0"
 authors.workspace = true
 edition.workspace = true
-license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
+license = "Apache-2.0"
 repository.workspace = true
 
 [package.metadata.polkadot-sdk]
