--- a/substrate/frame/root-offences/Cargo.toml
+++ b/substrate/frame/root-offences/Cargo.toml
@@ -26,6 +26,7 @@ frame-support = { workspace = true }
 frame-system = { workspace = true }
 sp-runtime = { workspace = true }
 sp-staking = { workspace = true }
+sp-core = { workspace = true }
 
 [dev-dependencies]
 pallet-balances = { workspace = true, default-features = true }
